xmlReader services reading in postconstruct